# gymnasia

./: .gitignore  AGENTS.md  BACKLOG_V1.md  CLAUDE.md  Makefile  README.md  SOUL.md  TECH_SPEC_V1.md  package-lock.json  package.json  pnpm-lock.yaml
.claude/: launch.json
alimentos/: aceite-girasol-virgen.json  aceite-girasol.json  aceite-oliva-refinado.json  aceite-oliva-virgen-extra.json  aceite-oliva-virgen.json  aceite-oliva.json  aguacate.json  all.json  almendras.json  arroz-basmati.json  arroz-blanco.json  arroz-integral.json  atun-lata-aceite.json  atun-lata-escabeche.json  atun-lata-natural.json  atun-lata.json  atun.json  avena.json  boniato.json  (+25 more)
apps/api/: .env.example  alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/versions/: 20260220_0001_phase1_auth_byok.py  20260220_0002_phase2_tracking.py  20260221_0003_phase3_to_phase6.py
apps/api/app/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py
apps/api/app/api/: router.py
apps/api/app/api/routes/: __init__.py  auth.py  chat.py  diet.py  measures.py  media.py  training.py
apps/api/app/core/: config.py
apps/api/app/db/: database.py  init_db.py
apps/api/app/models/: __init__.py  core.py
apps/api/app/routers/: account.py  ai_keys.py  auth.py  chat.py  diet.py  goals.py  measurements.py  media.py  sync.py  workouts.py
apps/api/app/schemas/: chat.py  common.py  diet.py  measures.py  media.py  training.py
apps/api/app/services/: agent.py  ai_runtime.py  encryption.py  media.py  nutrition.py  security.py  training.py
apps/api/app/utils/: auth.py  events.py
(+167 files in other folders)
