[project]
name = "gymnasia-api"
version = "0.1.0"
description = "Gymnasia FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "asyncpg>=0.29.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "langgraph>=0.2.0",
  "langchain>=0.2.0",
  "openai>=1.35.0",
  "anthropic>=0.32.0",
  "google-generativeai>=0.7.0",
  "supabase>=2.6.0"
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.5.0"
]
